<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkedFragment1">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_food_name_network"
                android:autofillHints=""
                android:padding="10sp"
                android:hint="@string/enter_food_name"
                android:background="@drawable/reserve_food_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_category"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_food_category_network"
                android:padding="8dp"
                android:entries="@array/food_categories"
                android:background="@drawable/reserve_food_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_food_price_network"
                android:autofillHints=""
                android:padding="10sp"
                android:hint="@string/enter_price_of_food"
                android:inputType="number"
                android:background="@drawable/reserve_food_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegetarian_type"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/is_it_vegetarian_network"
                android:text="@string/is_it_vegetarian"
                android:background="@drawable/reserve_food_bg"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_food_network"
                android:text="SAVE TO WEB"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:elevation="10dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>