<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FoodDetailsActivity"
    android:background="@drawable/arrow_bg">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/frag_act_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_viewpager_bg">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:id="@+id/backFromFoodDetails"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_details"
            android:id="@+id/food_details"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginEnd="3dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_details"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_id"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/food_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food Name: "
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/food_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_category1"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/food_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_price"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/food_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/is_it_vegetarian1"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/is_vegetarian_text"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/food_description_text"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This is Delicious food with fresh toppings."
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/goToupdateFood"
                    android:layout_weight="5"
                    android:backgroundTint="@color/blue"
                    android:text="UPDATE"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/deleteData"
                    android:layout_weight="5"
                    android:backgroundTint="@color/red"
                    android:text="DELETE"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>